tests/errors/block_param_annotation_mismatch.dang
twice(&block(x: Int!): Int!): Int! {
  block(1) + block(2)
}

twice { x: String! => x }
